--- a/lenia_field/config/default.yaml
+++ b/lenia_field/config/default.yaml
@@ -7,16 +7,30 @@ field:
   height: 512
   kernel_radius: 13
   kernel_sigma: 0.5
-  growth_mu: 0.15
-  growth_sigma: 0.015
-  growth_amplitude: 1.0
+  growth_mu: 0.15              # Standard Lenia value
+  growth_sigma: 0.015          # Standard Lenia value (narrow = selective growth)
+  growth_amplitude: 1.0        # Full Lenia dynamics
   dt: 0.1
   diffusion: 0.01
-  decay: 0.02
+  decay: 0.02                  # Moderate decay (patterns fade without feeding)
   injection_radius: 5.0
   injection_power: 0.1
   use_fft: true
   skip_diffusion: true
+
+  # Suzuki-style resource dynamics
+  # Key insight: Lenia can only grow WHERE resources exist
+  # Agents EMIT resources -> Lenia grows near agents
+  # Without agents, Lenia starves -> prevents filling screen
+  suzuki_style: true
+  r_max: 1.0                   # Maximum resource per cell
+  r_initial: 0.1               # Start VERY LOW - Lenia needs agents to feed it
+  R_C: 0.02                    # Morphogen consumes resources (moderate)
+  R_G: 0.001                   # Very slow natural recovery
+  resource_rule: "S"           # Growth modulated by resource
+  agents_emit_resources: true  # Agents ADD resources (feed Lenia)
+  resource_effect_rate: 0.5    # How much agents emit
+  resource_diffusion: 0.05     # Resources spread slowly
 
 # Agent configuration
 agent:
@@ -25,7 +39,7 @@ agent:
   persistence: 0.8
   boundary_mode: "reflect"
   boundary_margin: 5.0
-  injection_power: 2.0
+  injection_power: 3.0         # Higher injection for visible patterns
   injection_enabled: true
   color: [255, 255, 0]  # BGR - cyan
   radius: 4
